Quorum3/Library/Tests/Actions/Pass/HourOfCodePart1.quorum
text dna = "GATTACA"
output dna
text msg = "Welcome to " + dna
output msg