Quorum3/Library/Tests/Actions/Fail/HOCUndefinedVariable.quorum
text dna = "GATTACA"
text msg = "Welcome to " + dan
output msg